namespace/media/requestrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: requestrr
  namespace: media
  labels:
    app.kubernetes.io/name: requestrr
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: requestrr
      app.kubernetes.io/managed-by: flux
  template:
    metadata:
      labels:
        app.kubernetes.io/name: requestrr
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: youki
      containers:
        - name: requestrr
        # renovate: datasource=docker depName=docker.io/thomst08/requestrr
          image: docker.io/thomst08/requestrr:latest@sha256:e91cf44a769277ea10cc62ed148b1cd46126de2c6316dbc33aebe4de8bd094db
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4545
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: config
              mountPath: /root/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: requestrr-config
