namespace/media/requestrr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: requestrr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`requestrr.oglesby.io`)
      kind: Rule
      services:
        - name: requestrr
          port: 4545
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: requestrr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`requestrr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: requestrr
          port: 4545
